# smart_house_bot

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  init-db.sh  init_db.sh  main.py  smart_house_bot.code-workspace
bot/: pyproject.toml
bot/src/: config.py  ioc.py  main.py
bot/src/application/: interactors.py  interfaces.py
bot/src/controllers/: amqp_bot.py  bot.py
bot/src/domain/: entities.py
bot/src/infrastructure/: models.py
bot/src/infrastructure/adapters/: db.py  postgres.py  uow.py
bot/src/infrastructure/repositories/: home.py  user.py
command/: pyproject.toml
device_gateway/: pyproject.toml
migrations/: env.py  models.py
nlu/: pyproject.toml
stt/: pyproject.toml
stt/src/: config.py  ioc.py
stt/src/controllers/: amqp.py
stt/src/infrastructure/: redis.py
webapp/: pyproject.toml
