[project]
name = "nlu"
version = "0.1.0"
description = """
NLU Service is an asynchronous microservice that provides natural language
understanding and retrieval-augmented generation (RAG) capabilities. It
leverages sentence-transformers and Hugging Face Transformers with Torch
for embedding and inference, while Qdrant serves as the vector database
for semantic search. FastStream integrates RabbitMQ for message exchange,
Dishka ensures modular dependency injection, and Pydantic enforces strict
DTO validation. Uvicorn provides a lightweight runtime for exposing APIs
and integrations. This service acts as the intelligence layer, enabling
semantic command parsing and contextual responses for downstream services.
"""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dishka>=1.7.2",
    "faststream[rabbit]>=0.6.4",
    "pydantic>=2.12.5",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
]
